--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "npm": "*"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
