--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js sample app for OpenShift 3",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
     "pm2": "^2.4.5"
   },
   "engine": {
