--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "npm": "*"
   },
   "scripts": {
-    "start": "pm2 app.js",
+    "start": "pm2 start app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
